<resources>
    <string name="app_name">Order</string>
    <string name="login">Login</string>
    <string name="email_or_name">Email or username</string>
    <string name="enter_password">Enter your password</string>
    <string name="do_you_forget_your_password">Do you forget your password?</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_surname">Enter your surname</string>
    <string name="enter_your_telephone">Enter your telephone</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="administrator">Administrator</string>
    <string name="user">User</string>
    <string name="enter_store_name">Enter store name</string>
    <string name="sign_up_new_store">Sign up new store</string>
    <string name="enter_your_store">Enter your store</string>
    <string name="password_rules">Password must be minimum 8 characters,at least 1 upper case letter,at least 1 lower case letter,
        at least 1 number and 1 special character</string>
    <string name="must_confirm_password">Must confirm password</string>
    <string name="password_confirmed">Password confirmed</string>
    <string name="password_is_valid">Password is valid</string>
    <string name="must_not_be_empty">Must not be empty</string>
    <string name="store_name_is_valid">Store name is valid</string>
    <string name="email_name_is_valid">Email is valid</string>
    <string name="invalid_mail">Invalid mail</string>
    <string name="store_already_exists">Store already exists</string>
    <string name="successful_sign_up">Successful sign up</string>
    <string name="invalid_name">Invalid mail</string>
    <string name="invalid_password">Invalid password</string>
    <string name="store_does_not_exist">Store does not exist</string>
    <string name="user_name_is_valid">User name is valid</string>
    <string name="user_surname_is_valid">User surname is valid</string>
    <string name="telephone_is_valid">Telephone number is valid</string>
    <string name="telephone_invalid">Invalid telephone number></string>
    <string name="sign_up_store">Sign up store</string>
    <string name="login_user">Login user</string>
    <string name="log_in_store">Login store</string>
    <string name="sign_up_user">Sign up user</string>
    <string name="username_does_not_exist">Username does not exist</string>
    <string name="do_you_want_to_add_a_new_table">Do you want to add a new table?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">SAVE</string>
    <string name="create_table">Create table</string>
    <string name="cancel">CANCEL</string>
    <string name="tables">Tables</string>
    <string name="menu">Menu</string>
    <string name="menu_category">Create a new menu category</string>
    <string name="priority_number">Priority number</string>
    <string name="create_item">Create menu item</string>
    <string name="enter_the_price">Enter the price</string>
    <string name="enter_id">Enter id</string>
    <string name="enter_menu_item">Enter menu item</string>
    <string name="add_to_table">ADD</string>
    <string name="add_table">Add Table</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="extra">Extra</string>
    <string name="choice">Choose menu or tables</string>
    <string name="did_you_paid">Did you paid for this table?</string>
    <string name="do_you_want_to_empty">Do you want to empty  this table?</string>
    <string name="do_you_want_to_empty_menu_category">Do you want to empty  this menu category?</string>
    <string name="give_the_the_store_name">Give the store name</string>
    <string name="menu_category_access_from_table">Menu category access from table</string>
    <string name="menu_items_access_from_table">Menu items access from table</string>
    <string name="send_password">Send password to email</string>
    <string name="restore_user_password">Restore user password</string>
    <string name="log_in_store_greek">Είσοδος καταστήματος</string>
    <string name="login_user_greek">Είσοδος χρήστη</string>
    <string name="invalid_password_greek">Λάθος κωδικός</string>
    <string name="store_does_not_exist_greek">Το κατάστημα δεν υπάρχει</string>
    <string name="username_does_not_exist_greek">Ο χρήστης δεν υπάρχει</string>
    <string name="choice_greek">Επιλογή τραπέζια ή μενού</string>
    <string name="enter_store_name_greek">Όνομα καταστήματος</string>
    <string name="enter_password_greek">Κωδικός</string>
    <string name="login_greek">ΕΙΣΟΔΟΣ</string>
    <string name="enter_your_username_greek">Όνομα χρήστη</string>
    <string name="tables_greek">ΤΡΑΠΕΖΙΑ</string>
    <string name="menu_greek">ΜΕΝΟΥ</string>
    <string name="menu_category_greek">Κατηγορία μενού</string>
    <string name="sign_up_user_greek">ΕΓΓΡΑΦΗ ΝΕΟΥ ΧΡΗΣΤΗ</string>
    <string name="sign_up_user_greek_small">Εγγραφή νέου χρήστη</string>
    <string name="enter_your_email_greek">Εγγραφή email</string>
    <string name="confirm_your_password_greek">Επικύρωση κωδικού</string>
    <string name="administrator_greek">Διαχειριστής</string>
    <string name="user_greek">Χρήστης</string>
    <string name="enter_your_name_greek">Εισάγατε το όνομα σας</string>
    <string name="must_not_be_empty_greek">Δεν πρέπει να είναι άδειο</string>
    <string name="user_name_is_valid_greek">Το όνομα χρήστη είναι έγκυρο</string>
    <string name="email_name_is_valid_greek">Το email είναι έγκυρο</string>
    <string name="invalid_mail_greek">Μη έγκυρο mail</string>
    <string name="password_is_valid_greek">Ο κωδικός είναι έγκυρος</string>
    <string name="password_confirmed_greek">Επιβεβαίωση κωδικού</string>
    <string name="must_confirm_password_greek">Πρέπει να επιβεβαιώσετε τον κωδικό πρόσβασης</string>
    <string name="priority_number_greek">Σειρά προτεραιότητας</string>
    <string name="save_greek">ΑΠΟΘΗΚΕΥΣΗ</string>
    <string name="cancel_greek">ΑΚΥΡΟ</string>
    <string name="create_table_greek">Δημιουργία τραπεζιού</string>
    <string name="do_you_want_to_empty_greek">Θέλεις να αδειάσεις το τραπέζι;</string>
    <string name="did_you_paid_greek">Πληρωθήκατε για αυτό το τραπέζι;</string>
    <string name="yes_greek">ΝΑΙ</string>
    <string name="no_greek">OXI</string>
    <string name="menu_category_access_from_table_greek">Κατηγορία του μενού που έχει πρόσβαση από το τραπέζι</string>
    <string name="enter_menu_item_greek">Πρόσθεσε νέο είδος</string>
    <string name="enter_extra_greek">Πρόσθεσε έξτρα</string>
    <string name="extra_greek">ΕΞΤΡΑ</string>
    <string name="xwris_greek">ΧΩΡΙΣ</string>
    <string name="enter_xwris_greek">Πρόσθεσε χωρίς</string>
    <string name="enter_the_price_greek">Δώσε τιμή</string>
    <string name="tziros_greek">ΤΖΙΡΟΣ</string>
    <string name="proionta_greek">ΠΡΟΙΟΝΤΑ</string>
    <string name="kathimerinos_greek">Καθημερινός</string>
    <string name="evdomadiaos_greek">Εβδομαδιαίος</string>
    <string name="miniaios_greek">Μηνιαίος</string>
    <string name="orofoi_greek">ΟΡΟΦΟΙ</string>
    <string name="dimiourgia_orofou_greek">Δημιουργία ορόφου</string>
    <string name="kathimerina_greek">Καθημερινά</string>
    <string name="evdomadaia_greek">Εβδομαδιαία</string>
    <string name="miniaia_greek">Μηνιαία</string>
    <string name="wra_greek">ΩΡΑ</string>
    <string name="date_greek">ΗΜΕΡΟΜΗΝΙΑ</string>
    <string name="kouber_greek">ΚΟΥΒΕΡ</string>
    <string name="kathimerina_kouber_greek">ΚΑΘΗΜΕΡΙΝΑ</string>
    <string name="diagramma_greek">ΔΙΑΓΡΑΜΜΑ</string>
    <string name="time_date_greek">ΩΡΑ ΗΜΕΡΟΜΗΝΙΑ</string>
    <string name="partial_paid_greek">Πληρωθήκατε για αυτά τα είδη;</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="print_button">Print button</string>
    <string name="sunolo_greek">Συνολο</string>
    <string name="payment_greek">Πληρωμη</string>
    <string name="number_of_items_greek">ΑΡΙΘΜΟΣ ΕΙΔΩΝ</string>
    <string name="create_item_greek">Δημιουργία νέου είδους μενού</string>
    <string name="remember_password_greek">Απομνημόνευση κωδικού</string>
    <string name="set_password_greek">Τοποθέτηση αποθηκευμένου κωδικού</string>
    <string name="notifications_greek">ΕΙΔΟΠΟΙΗΣΕΙΣ</string>
    <string name="enable_notifications">Ενεργοποίηση ειδοποιήσεων</string>
    <string name="default_notification_channel_id">channel_1</string>
    <string name="fcm_message">firebase_message</string>
    <string name="default_notification_channel_name">channel</string>
    <string name="msg_subscribed">success</string>
    <string name="msg_subscribe_failed">failed</string>
    <string name="printers_greek">ΕΚΤΥΠΩΤΕΣ</string>
    <string name="ip_address_greek">Δώσε IP Address</string>
    <string name="port">Δώσε Port</string>
    <string name="delete_greek">ΕΚΚΑΘΑΡΙΣΗ</string>
    <string name="do_you_want_to_empty_menu_category_greek">Θέλεις να σβήσεις αυτή την κατηγορία μενού?</string>
    <string name="orektika">Ορεκτικά</string>
    <string name="main_dishes_greek">Κυρίως</string>
    <string name="coffees">Καφέδες</string>
    <string name="drinks">Ποτά</string>


</resources>
